[project]
name = "muclic"
version = "0.2.4"
description = "A cli for downloading music from Youtube Music"
authors = [
  { name = "Cyliann", email = "maksymilian@cych.eu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "yt-dlp",
  "requests",
  "ytmusicapi",
  "mutagen",
  "azapi>=3.0.8",
]

[project.scripts]
muclic = "muclic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
